<resources>
    <string name="app_name">DreamPerfumes</string>
    <string name="title_activity_navegador">Navegador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Gallery</string>
    <string name="menu_generaciones">Generaciones</string>
    <string name="menu_comisiones">Comisiones</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_chat">Chat con nosotros</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_navedrawer">navedrawer</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="registrar">Registrar</string>
</resources>