<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_generaciones"
            android:icon="@drawable/baseline_upcoming_24"
            android:title="@string/menu_generaciones" />
        <item
            android:id="@+id/nav_comisiones"
            android:icon="@drawable/baseline_attach_money_24"
            android:title="@string/menu_comisiones" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/baseline_checklist_24"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>